k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_NAME}
  labels:
    service: ${K8S_NAME}
spec:
  ports:
  - port: 8085
    protocol: TCP
    name: app
    targetPort: 8085
  - port: ${K8S_DEBUG_PORT}
    protocol: TCP
    name: debug
    targetPort: 5005
  selector:
    app: ${K8S_NAME}
